<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:weightSum="1">

        <WebView
            android:id="@+id/vision"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:weightSum="1">

            <Button
                android:id="@+id/left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/left"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/right"
                android:textSize="50sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:weightSum="0.9">

        <Button
            android:id="@+id/forward"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:text="@string/forward"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:text="@string/stop"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/backward"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:text="@string/backward"
            android:textSize="50sp"/>

    </LinearLayout>

</LinearLayout>